--- a/views/admin/partials/header.view.ejs
+++ b/views/admin/partials/header.view.ejs
@@ -41,7 +41,7 @@
         aria-expanded="false"
         ><img
           class="rounded-circle img-avatar header-user-avatar"
-          src="<%= account.avatar %>"
+          src="<%= accountLogin.avatar %>"
           alt="avatar"
           width="40px"
           height="40px"
@@ -52,7 +52,7 @@
       >
         <li>
           <div class="dropdown-item header-dropdown-link">
-            Xin chào <b><%= account.fullName %></b> 😍
+            Xin chào <b><%= accountLogin.fullName %></b> 😍
           </div>
         </li>
         <li>
