--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -40,28 +40,46 @@
 
     <main class="main">
       <!-- Banner Header -->
-      <section class="herobanner">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-12">
-              <div class="single-item button__trans">
-                <div class="mx-1 herobanner__box">
+      <section class="mt-3 mt-md-4 herobanner">
+        <div class="container">
+          <div class="row gap-md-0 px-2">
+            <div class="col-lg-8 col-md-8 col-12 p-0">
+              <div class="herobanner-slider button-trans">
+                <div class="mx-1 herobanner-box">
                   <img
-                    src="https://hali.vn/wp-content/uploads/2020/07/thiet-ke-banner-my-pham3.jpg"
+                    src="https://media.comem.vn/uploads/2025/09/Asset_14x-100.jpg"
                     alt=""
                     width="100%"
                   />
                 </div>
-                <div class="mx-1 herobanner__box">
+                <div class="mx-1 herobanner-box">
                   <img
-                    src="https://treobangron.com.vn/wp-content/uploads/2022/09/banner-my-pham-23.jpg"
+                    src="https://media.comem.vn/uploads/2025/09/Asset_2.png"
                     alt=""
                     width="100%"
                   />
                 </div>
-                <div class="mx-1 herobanner__box">
+                <div class="mx-1 herobanner-box">
                   <img
-                    src="https://treobangron.com.vn/wp-content/uploads/2022/09/banner-my-pham-14.jpg"
+                    src="https://media.comem.vn/uploads/2025/09/Asset_2.png"
+                    alt=""
+                    width="100%"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="col-4 p-0 d-md-block d-none">
+              <div class="herobanner-image d-flex flex-column gap-0">
+                <div class="banner flex-grow-1">
+                  <img
+                    src="https://img.freepik.com/premium-vector/set-luxury-cosmetics-red-silk-background_259839-68.jpg"
+                    alt=""
+                    width="100%"
+                  />
+                </div>
+                <div class="banner flex-grow-1">
+                  <img
+                    src="https://img.freepik.com/free-vector/pomegranate-cosmetic-bottles-beauty-banner_33099-2264.jpg?semt=ais_hybrid&w=740&q=80"
                     alt=""
                     width="100%"
                   />
@@ -74,91 +92,91 @@
       <!-- End Banner Header -->
 
       <!-- Product Type Card -->
-      <section class="product__type">
+      <section class="product-type">
         <div class="container">
-          <h3 class="heading-text text-center product__type-title">Các Loại Sản Phẩm</h3>
+          <h3 class="heading-text text-center product-type-title">Các Loại Sản Phẩm</h3>
           <div class="row g-2">
-            <div class="col-lg-4 col-md-4 col-6 product__type-item">
-              <div class="card__bg">
-                <div class="card__overlay"></div>
-                <div class="card__text">
-                  <div class="title-font card__title">Nail care</div>
-                  <span class="content-font card__content">Chăm sóc móng</span>
+            <div class="col-lg-4 col-md-4 col-6 product-type-item">
+              <div class="card-bg">
+                <div class="card-overlay"></div>
+                <div class="card-text">
+                  <div class="title-font card-title">Nail care</div>
+                  <span class="content-font card-content">Chăm sóc móng</span>
                 </div>
                 <img
                   src="https://file.hstatic.net/200000073977/file/cac-buoc-trang-diem-cho-da-dau_af42aec374df4d48abfee094b920598a.jpeg"
                   alt=""
-                  class="card__img"
+                  class="card-img"
                 />
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-6 product__type-item">
-              <div class="card__bg">
-                <div class="card__overlay"></div>
-                <div class="card__text">
-                  <div class="title-font card__title">Nail care</div>
-                  <span class="content-font card__content">Chăm sóc móng</span>
+            <div class="col-lg-4 col-md-4 col-6 product-type-item">
+              <div class="card-bg">
+                <div class="card-overlay"></div>
+                <div class="card-text">
+                  <div class="title-font card-title">Nail care</div>
+                  <span class="content-font card-content">Chăm sóc móng</span>
                 </div>
                 <img
                   src="https://png.pngtree.com/background/20211216/original/pngtree-plant-beauty-daytime-cosmetics-indoor-still-life-posing-photography-map-with-picture-image_1540535.jpg"
                   alt=""
-                  class="card__img"
+                  class="card-img"
                 />
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-6 product__type-item">
-              <div class="card__bg">
-                <div class="card__overlay"></div>
-                <div class="card__text">
-                  <div class="title-font card__title">Nail care</div>
-                  <span class="content-font card__content">Chăm sóc móng</span>
+            <div class="col-lg-4 col-md-4 col-6 product-type-item">
+              <div class="card-bg">
+                <div class="card-overlay"></div>
+                <div class="card-text">
+                  <div class="title-font card-title">Nail care</div>
+                  <span class="content-font card-content">Chăm sóc móng</span>
                 </div>
                 <img
                   src="https://nuochoamc.com/upload/images/bai-viet/336/nuoc-hoa-creed-mui-thom-nhat-nam-2024.webp"
                   alt=""
-                  class="card__img"
+                  class="card-img"
                 />
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-6 product__type-item">
-              <div class="card__bg">
-                <div class="card__overlay"></div>
-                <div class="card__text">
-                  <div class="title-font card__title">Nail care</div>
-                  <span class="content-font card__content">Chăm sóc móng</span>
+            <div class="col-lg-4 col-md-4 col-6 product-type-item">
+              <div class="card-bg">
+                <div class="card-overlay"></div>
+                <div class="card-text">
+                  <div class="title-font card-title">Nail care</div>
+                  <span class="content-font card-content">Chăm sóc móng</span>
                 </div>
                 <img
                   src="https://thevigocorp.com/wp-content/uploads/2023/11/Authorized_Profressional_Slider-img-rsc.com2_.jpg-copy-768x536.jpg"
                   alt=""
-                  class="card__img"
+                  class="card-img"
                 />
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-6 product__type-item">
-              <div class="card__bg">
-                <div class="card__overlay"></div>
-                <div class="card__text">
-                  <div class="title-font card__title">Nail care</div>
-                  <span class="content-font card__content">Chăm sóc móng</span>
+            <div class="col-lg-4 col-md-4 col-6 product-type-item">
+              <div class="card-bg">
+                <div class="card-overlay"></div>
+                <div class="card-text">
+                  <div class="title-font card-title">Nail care</div>
+                  <span class="content-font card-content">Chăm sóc móng</span>
                 </div>
                 <img
                   src="https://thevigocorp.com/wp-content/uploads/2023/11/Authorized_Profressional_Slider-img-rsc.com2_.jpg-copy-768x536.jpg"
                   alt=""
-                  class="card__img"
+                  class="card-img"
                 />
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-6 product__type-item">
-              <div class="card__bg">
-                <div class="card__overlay"></div>
-                <div class="card__text">
-                  <div class="title-font card__title">Nail care</div>
-                  <span class="content-font card__content">Chăm sóc móng</span>
+            <div class="col-lg-4 col-md-4 col-6 product-type-item">
+              <div class="card-bg">
+                <div class="card-overlay"></div>
+                <div class="card-text">
+                  <div class="title-font card-title">Nail care</div>
+                  <span class="content-font card-content">Chăm sóc móng</span>
                 </div>
                 <img
                   src="https://thevigocorp.com/wp-content/uploads/2023/11/Authorized_Profressional_Slider-img-rsc.com2_.jpg-copy-768x536.jpg"
                   alt=""
-                  class="card__img"
+                  class="card-img"
                 />
               </div>
             </div>
@@ -168,40 +186,40 @@
       <!-- End Product Type Card -->
 
       <!-- Feature Card Slide -->
-      <section class="card__feature-slide">
+      <section class="card-feature">
         <div class="container">
-          <h3 class="heading-font text-center card__feature-heading">Sản Phẩm Nổi Bật</h3>
+          <h3 class="heading-font text-center card-feature-heading">Sản Phẩm Nổi Bật</h3>
           <div class="row">
             <div class="col-12">
-              <div class="autoplay autoplay-card-feature button__trans">
+              <div class="card-feature-slider button-trans">
                 <% productList.forEach((product) => { %> <% if(product.featured === '1') {%>
-                <div class="card__bg" title="<%= product.title %>">
-                  <div class="card__image">
+                <div class="card-bg" title="<%= product.title %>">
+                  <div class="card-image">
                     <img
                       src="<%= product.thumbnail %>"
                       alt="product"
                       width="100%"
-                      class="card__thumbnail"
+                      class="card-thumbnail"
                     />
-                    <div class="card__link">
+                    <div class="card-link">
                       <a
                         href="/products/detail/<%= product.slug %>"
-                        class="content-font card__link-detail"
+                        class="content-font card-link-detail"
                         >Xem chi tiết</a
                       >
                     </div>
                   </div>
-                  <div class="content-font card__title mt-1">
+                  <div class="content-font card-title mt-1">
                     <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %>
                     <% } else { %> <%= product.title %><% } %>
                   </div>
-                  <div class="card__box d-flex justify-content-between align-items-center">
-                    <h5 class="title-font card__price">
+                  <div class="card-box d-flex justify-content-between align-items-center">
+                    <h5 class="title-font card-price">
                       <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                       }).format(Number.parseFloat(product.price - (product.price / 100 *
                       product.discount))) %>
                     </h5>
-                    <div class="card__favorite">
+                    <div class="card-favorite">
                       <i class="bi bi-suit-heart-fill"></i>
                     </div>
                   </div>
@@ -209,8 +227,8 @@
                     Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                     }).format(product.price) %>
                   </div>
-                  <div class="card__rating d-flex justify-content-between align-items-center">
-                    <div class="card__star">
+                  <div class="card-rating d-flex justify-content-between align-items-center">
+                    <div class="card-star">
                       <% for(let i = 1; i <= product.rating; i++) { %>
                       <i class="bi bi-star-fill"></i>
                       <% } %>
@@ -251,40 +269,40 @@
       <!-- End Banner Image -->
 
       <!-- Sale Card Slide -->
-      <section class="card__sale-slide">
+      <section class="card-sale">
         <div class="container">
-          <h3 class="heading-font text-center card__feature-heading">Sản Phẩm Đang Giảm Giá</h3>
+          <h3 class="heading-font text-center card-sale-heading">Sản Phẩm Đang Giảm Giá</h3>
           <div class="row">
             <div class="col-12">
-              <div class="autoplay autoplay-card-sale button__trans">
+              <div class="card-sale-slider button-trans">
                 <% productList.forEach((product) => { %> <% if(product. discount !== 0) {%>
-                <div class="card__bg" title="<%= product.title %>">
-                  <div class="card__image">
+                <div class="card-bg" title="<%= product.title %>">
+                  <div class="card-image">
                     <img
                       src="<%= product.thumbnail %>"
                       alt="product"
                       width="100%"
-                      class="card__thumbnail"
+                      class="card-thumbnail"
                     />
-                    <div class="card__link">
+                    <div class="card-link">
                       <a
                         href="/products/detail/<%= product.slug %>"
-                        class="content-font card__link-detail"
+                        class="content-font card-link-detail"
                         >Xem chi tiết</a
                       >
                     </div>
                   </div>
-                  <div class="content-font card__title mt-1">
+                  <div class="content-font card-title mt-1">
                     <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %>
                     <% } else { %> <%= product.title %><% } %>
                   </div>
-                  <div class="card__box d-flex justify-content-between align-items-center">
-                    <h5 class="title-font card__price">
+                  <div class="card-box d-flex justify-content-between align-items-center">
+                    <h5 class="title-font card-price">
                       <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                       }).format(Number.parseFloat(product.price - (product.price / 100 *
                       product.discount)))%>
                     </h5>
-                    <div class="card__favorite">
+                    <div class="card-favorite">
                       <i class="bi bi-suit-heart-fill"></i>
                     </div>
                   </div>
@@ -292,8 +310,8 @@
                     Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                     }).format(product.price) %>
                   </div>
-                  <div class="card__rating d-flex justify-content-between align-items-center">
-                    <div class="card__star">
+                  <div class="card-rating d-flex justify-content-between align-items-center">
+                    <div class="card-star">
                       <% for(let i = 1; i <= product.rating; i++) { %>
                       <i class="bi bi-star-fill"></i>
                       <% } %>
@@ -318,7 +336,7 @@
       <!-- Google Map - Location -->
       <section class="location">
         <div class="container">
-          <h3 class="heading-font text-center location__title">Vị Trí</h3>
+          <h3 class="heading-font text-center location-title">Vị Trí</h3>
           <div class="row">
             <div class="col-12">
               <iframe
@@ -338,6 +356,8 @@
       <!-- End Google Map - Location -->
     </main>
 
+    <%-include('../../partials/footer.view.ejs') %>
+
     <form
       action="/cart/delete"
       method="POST"
@@ -352,11 +372,10 @@
       id="form-change-quantity-cart"
     ></form>
 
-    <%-include('../../partials/footer.view.ejs') %>
-
     <!-- Scripts File -->
     <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
+    <script src="/client/scripts/product/toggleSearchProduct.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
     <!-- End Scripts File -->
