--- a/public/client/styles/pages/index/index.css
+++ b/public/client/styles/pages/index/index.css
@@ -1,10 +1,8 @@
 /* Slick Slide */
-.single-item.slick-initialized.slick-slider,
-.autoplay.slick-initialized.slick-slider {
+.slick-initialized.slick-slider {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* margin-top: 50px; */
   z-index: 888;
 }
 button.slick-prev.slick-arrow,
@@ -24,35 +22,63 @@ button.slick-next.slick-arrow i:hover {
   background: var(--light-gray-color);
   transition: 0.4s ease-out;
 }
+
+.herobanner .herobanner-slider {
+  position: relative;
+  width: 100%;
+  max-height: 100%;
+}
+.herobanner .slick-list,
+.herobanner .slick-track {
+  height: auto;
+  max-height: 100%;
+  aspect-ratio: 16 / 7.1;
+}
+.herobanner .herobanner-slider img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+.herobanner button.slick-prev.slick-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
+  z-index: 500;
+}
+.herobanner button.slick-next.slick-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  z-index: 500;
+}
+.herobanner button.slick-prev.slick-arrow i,
+.herobanner button.slick-next.slick-arrow i {
+  background: #ffffff7e;
+}
+.herobanner .herobanner-image {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  aspect-ratio: 3 / 2.65;
+}
 /* End Slick Slide */
 
-/* Banner */
-.herobanner .herobanner__box {
-  width: 100%;
-  aspect-ratio: 7/1.6;
-  background: #000;
-  overflow: hidden;
-}
-.herobanner .herobanner__box img {
-  width: 100%;
-  object-fit: cover;
-}
-/* End Banner */
-
 /* Product Type */
-.product__type .product__type-title {
+.product-type .product-type-title {
   color: var(--dark-gray-color);
   font-family: var(--primary-font-family);
   font-weight: var(--heading-font-weight);
   padding: 40px 0px;
 }
-.product__type .card__bg {
+.product-type .card-bg {
   width: 100%;
   aspect-ratio: 3/2;
   position: relative;
   overflow: hidden;
 }
-.product__type .card__bg .card__overlay {
+.product-type .card-bg .card-overlay {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -64,11 +90,11 @@ button.slick-next.slick-arrow i:hover {
   transform: scale(0);
   z-index: 800;
 }
-.product__type .card__bg:hover .card__overlay {
+.product-type .card-bg:hover .card-overlay {
   transform: scale(1);
   transition: 0.2s ease;
 }
-.product__type .card__bg .card__text {
+.product-type .card-bg .card-text {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -78,13 +104,13 @@ button.slick-next.slick-arrow i:hover {
   flex-direction: column;
   z-index: 810;
 }
-.product__type .card__bg .card__text .card__title {
+.product-type .card-bg .card-text .card-title {
   color: var(--primary-color);
   font-family: var(--primary-font-family);
   transform: scale(0);
   position: relative;
 }
-.product__type .card__bg .card__text .card__title::after {
+.product-type .card-bg .card-text .card-title::after {
   position: absolute;
   top: 25px;
   left: 0;
@@ -96,22 +122,22 @@ button.slick-next.slick-arrow i:hover {
   opacity: 0;
   transform: scaleX(0);
 }
-.product__type .card__bg .card__text .card__title:hover::after {
+.product-type .card-bg .card-text .card-title:hover::after {
   opacity: 1;
   transform: scaleX(1);
   transition: 0.2s ease-out;
 }
-.product__type .card__bg .card__text .card__content {
+.product-type .card-bg .card-text .card-content {
   font-family: var(--primary-font-family);
   color: rgba(216, 216, 216, 0.789);
   transform: scale(0);
 }
-.product__type .card__bg:hover .card__text .card__title,
-.card__bg:hover .card__text .card__content {
+.product-type .card-bg:hover .card-text .card-title,
+.card-bg:hover .card-text .card-content {
   transform: scale(1);
   transition: 0.2s ease 0.25s;
 }
-.product__type .card__bg .card__img {
+.product-type .card-bg .card-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -144,18 +170,17 @@ button.slick-next.slick-arrow i:hover {
   font-family: var(--primary-font-family);
   font-weight: var(--heading-font-weight);
 }
-.card-slide .button__trans {
+.card-slide .button-trans {
   display: flex;
 }
-.card-slide .button__trans .slick-list {
+.card-slide .button-trans .slick-list {
   padding: 20px 0px;
 }
-.card-slide .button__trans .card-slide-bg {
+.card-slide .button-trans .card-slide-bg {
   width: 100%;
   padding: 10px;
   margin: 0px 5px;
   height: auto;
-  /* background: rgb(224, 224, 224); */
   color: var(--dark-gray-color);
   font-family: var(--primary-font-family);
   text-decoration: none;
@@ -164,18 +189,18 @@ button.slick-next.slick-arrow i:hover {
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
-.card-slide .button__trans .card-slide-bg:hover {
+.card-slide .button-trans .card-slide-bg:hover {
   transform: translateY(-15px);
   background: var(--light-primary-color);
   transition: 0.2s ease-in-out;
 }
-.card-slide .button__trans .card-slide-bg .card-slide-img {
+.card-slide .button-trans .card-slide-bg .card-slide-img {
   width: 100%;
   aspect-ratio: 3/3;
   position: relative;
   perspective: 200;
 }
-.card-slide .button__trans .card-slide-bg .card-slide-img::after {
+.card-slide .button-trans .card-slide-bg .card-slide-img::after {
   padding: 3px 6px;
   position: absolute;
   top: -5px;
@@ -190,59 +215,59 @@ button.slick-next.slick-arrow i:hover {
   opacity: 0;
   visibility: hidden;
 }
-.card-slide .button__trans .card-slide-bg:hover .card-slide-img::after {
+.card-slide .button-trans .card-slide-bg:hover .card-slide-img::after {
   transform: scaleY(1) skewX(-15deg);
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.268);
   opacity: 1;
   visibility: visible;
   transition: 0.2s ease-out 0.2s;
 }
-.card-slide .button__trans .card-slide-bg .card-slide-img .card-slide-thumbnail {
+.card-slide .button-trans .card-slide-bg .card-slide-img .card-slide-thumbnail {
   object-fit: cover;
 }
-.card-slide .button__trans .card-slide-bg .card-slide-title {
+.card-slide .button-trans .card-slide-bg .card-slide-title {
   margin-top: 2px;
   font-size: var(--title-font-size);
   font-weight: var(--content-font-weight);
 }
-.card-slide .button__trans .card-slide-bg .card-slide-box {
+.card-slide .button-trans .card-slide-bg .card-slide-box {
   display: flex;
   justify-content: space-between;
   margin: 3px 0px;
   border-bottom: 1px solid var(--light-gray-color);
   border-radius: 0.5px;
 }
-.card-slide .button__trans .card-slide-bg:hover .card-slide-box {
+.card-slide .button-trans .card-slide-bg:hover .card-slide-box {
   border-bottom: 1px solid var(--dark-gray-color);
   transition: 0.4s ease-out;
 }
-.card-slide .button__trans .card-slide-bg .card-slide-box .card-slide-price {
+.card-slide .button-trans .card-slide-bg .card-slide-box .card-slide-price {
   color: var(--primary-color);
   font-size: var(--heading-font-size);
   font-weight: var(--heading-font-weight);
 }
-.card-slide .button__trans .card-slide-bg .card-slide-box i {
+.card-slide .button-trans .card-slide-bg .card-slide-box i {
   font-size: var(--icon-font-size);
   padding: 6.5px 8px 5.5px 8px;
   background: none;
   color: var(--dark-gray-color);
 }
-.card-slide .button__trans .card-slide-bg .card-slide-rating {
+.card-slide .button-trans .card-slide-bg .card-slide-rating {
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
 }
-.card-slide .button__trans .card-slide-bg .card-slide-rating .card-slide-star i {
+.card-slide .button-trans .card-slide-bg .card-slide-rating .card-slide-star i {
   color: var(--dark-gray-color);
 }
-.card-slide .button__trans .card-slide-bg .card-slide-rating i.bi-bag-check-fill {
+.card-slide .button-trans .card-slide-bg .card-slide-rating i.bi-bag-check-fill {
   font-size: var(--icon-font-size);
   padding: 4px 8px;
   color: var(--dark-gray-color);
   background: none;
   border: 1px solid var(--dark-gray-color);
 }
-.card-slide .button__trans .card-slide-bg .card-slide-rating i.bi-bag-check-fill:hover {
+.card-slide .button-trans .card-slide-bg .card-slide-rating i.bi-bag-check-fill:hover {
   color: var(--light-gray-color);
   background: var(--dark-gray-color);
   transition: 0.4s ease-out;
@@ -250,16 +275,16 @@ button.slick-next.slick-arrow i:hover {
 /* End Card Slide */
 
 /* Product Card */
-.card__feature-slide .button__trans,
-.card__sale-slide .button__trans {
+.card-feature .button-trans,
+.card-sale .button-trans {
   display: flex;
 }
-.card__feature-slide .button__trans .slick-list,
-.card__sale-slide .button__trans .slick-list {
+.card-feature .button-trans .slick-list,
+.card-sale .button-trans .slick-list {
   padding: 20px 0px;
 }
-.card__feature-slide .card__bg,
-.card__sale-slide .card__bg {
+.card-feature .card-bg,
+.card-sale .card-bg {
   width: 100%;
   padding: 10px;
   color: var(--dark-gray-color);
@@ -269,27 +294,27 @@ button.slick-next.slick-arrow i:hover {
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
-.card__feature-slide .card__bg:hover,
-.card__sale-slide .card__bg:hover {
+.card-feature .card-bg:hover,
+.card-sale .card-bg:hover {
   background: var(--light-primary-color);
   transform: translateY(-5px);
   transition: 0.2s ease-in-out;
 }
-.card__feature-slide .card__bg .card__image,
-.card__sale-slide .card__bg .card__image {
+.card-feature .card-bg .card-image,
+.card-sale .card-bg .card-image {
   width: 100%;
   aspect-ratio: 3/3;
   position: relative;
   overflow: hidden;
 }
-.card__feature-slide .card__bg .card__image .card__thumbnail,
-.card__sale-slide .card__bg .card__image .card__thumbnail {
+.card-feature .card-bg .card-image .card-thumbnail,
+.card-sale .card-bg .card-image .card-thumbnail {
   object-fit: cover;
   position: absolute;
   z-index: 499;
 }
-.card__feature-slide .card__bg .card__image .card__link,
-.card__sale-slide .card__bg .card__image .card__link {
+.card-feature .card-bg .card-image .card-link,
+.card-sale .card-bg .card-image .card-link {
   width: 100%;
   height: 100%;
   background: #0000009e;
@@ -302,59 +327,59 @@ button.slick-next.slick-arrow i:hover {
   transform: translateY(-101%);
   transition: 0.3s ease-out;
 }
-.card__feature-slide .card__bg:hover .card__image .card__link,
-.card__sale-slide .card__bg:hover .card__image .card__link {
+.card-feature .card-bg:hover .card-image .card-link,
+.card-sale .card-bg:hover .card-image .card-link {
   transform: translateY(0%);
 }
-.card__feature-slide .card__bg .card__image .card__link .card__link-detail,
-.card__sale-slide .card__bg .card__image .card__link .card__link-detail {
+.card-feature .card-bg .card-image .card-link .card-link-detail,
+.card-sale .card-bg .card-image .card-link .card-link-detail {
   display: block;
   text-decoration: none;
   color: var(--primary-color);
   padding: var(--padding-button);
   border: var(--border-thickness-button) solid var(--primary-color);
 }
-.card__feature-slide .card__bg .card__image .card__link .card__link-detail:hover,
-.card__sale-slide .card__bg .card__image .card__link .card__link-detail:hover {
+.card-feature .card-bg .card-image .card-link .card-link-detail:hover,
+.card-sale .card-bg .card-image .card-link .card-link-detail:hover {
   text-decoration: underline;
 }
-.card__feature-slide .card__bg .card__box,
-.card__sale-slide .card__bg .card__box {
+.card-feature .card-bg .card-box,
+.card-sale .card-bg .card-box {
   margin: 3px 0px;
   border-bottom: 1px solid var(--light-gray-color);
   border-radius: 0.5px;
 }
-.card__feature-slide .card__bg:hover .card__box,
-.card__sale-slide .card__bg:hover .card__box {
+.card-feature .card-bg:hover .card-box,
+.card-sale .card-bg:hover .card-box {
   border-bottom: 1px solid var(--dark-gray-color);
   transition: 0.4s ease-out;
 }
-.card__feature-slide .card__bg .card__box .card__price,
-.card__sale-slide .card__bg .card__box .card__price {
+.card-feature .card-bg .card-box .card-price,
+.card-sale .card-bg .card-box .card-price {
   color: var(--primary-color);
 }
-.card__feature-slide .card__bg .card__box i,
-.card__sale-slide .card__bg .card__box i {
+.card-feature .card-bg .card-box i,
+.card-sale .card-bg .card-box i {
   padding: 6.5px 8px 5.5px 8px;
   background: none;
   color: var(--dark-gray-color);
   font-size: var(--icon-font-size);
 }
-.card__feature-slide .card__bg .card__rating .card__star i,
-.card__sale-slide .card__bg .card__rating .card__star i {
+.card-feature .card-bg .card-rating .card-star i,
+.card-sale .card-bg .card-rating .card-star i {
   font-size: var(--icon-font-size2);
   color: var(--dark-gray-color);
 }
-.card__feature-slide .card__bg .card__rating i.bi-bag-check-fill,
-.card__sale-slide .card__bg .card__rating i.bi-bag-check-fill {
+.card-feature .card-bg .card-rating i.bi-bag-check-fill,
+.card-sale .card-bg .card-rating i.bi-bag-check-fill {
   font-size: var(--icon-font-size);
   padding: 4px 8px;
   color: var(--dark-gray-color);
   background: none;
   border: 1px solid var(--dark-gray-color);
 }
-.card__feature-slide .card__bg .card__rating i.bi-bag-check-fill:hover,
-.card__sale-slide .card__bg .card__rating i.bi-bag-check-fill:hover {
+.card-feature .card-bg .card-rating i.bi-bag-check-fill:hover,
+.card-sale .card-bg .card-rating i.bi-bag-check-fill:hover {
   color: var(--light-gray-color);
   background: var(--dark-gray-color);
   transition: 0.4s ease-out;
