--- a/public/client/styles/pages/product/detail.css
+++ b/public/client/styles/pages/product/detail.css
@@ -1,27 +1,27 @@
-.product__info-title {
+.product-info-title {
   text-align: left;
   padding: 0px;
 }
-.product__info-description {
+.product-info-description {
   text-align: justify;
 }
-.product__info-rating {
+.product-info-rating {
   color: var(--primary-color);
 }
-.product__info-button .product__info-quantity {
+.product-info-button .product-info-quantity {
   color: var(--dark-gray-color);
   border-color: var(--primary-color) !important;
 }
 
 /* Product Card */
-.card__related-slide .button__trans {
+.card-related-slide .button-trans {
   display: flex;
 }
-.card__related-slide .button__trans .slick-list {
+.card-related-slide .button-trans .slick-list {
   padding: 20px 0px;
 }
 /* Product Card */
-.card__bg {
+.card-bg {
   width: 100%;
   /* height: 100% !important; */
   padding: 10px;
@@ -33,23 +33,23 @@
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
-.card__bg:hover {
+.card-bg:hover {
   background: var(--light-primary-color);
   transform: translateY(-5px);
   transition: 0.2s ease-in-out;
 }
-.card__bg .card__image {
+.card-bg .card-image {
   width: 100%;
   aspect-ratio: 3/3;
   position: relative;
   overflow: hidden;
 }
-.card__bg .card__image .card__thumbnail {
+.card-bg .card-image .card-thumbnail {
   object-fit: cover;
   position: absolute;
   z-index: 499;
 }
-.card__bg .card__image .card__link {
+.card-bg .card-image .card-link {
   width: 100%;
   height: 100%;
   background: #0000009e;
@@ -62,49 +62,49 @@
   transform: translateY(-101%);
   transition: 0.3s ease-out;
 }
-.card__bg:hover .card__image .card__link {
+.card-bg:hover .card-image .card-link {
   transform: translateY(0%);
 }
-.card__bg .card__image .card__link .card__link-detail {
+.card-bg .card-image .card-link .card-link-detail {
   display: block;
   text-decoration: none;
   color: var(--primary-color);
   padding: var(--padding-button);
   border: var(--border-thickness-button) solid var(--primary-color);
 }
-.card__bg .card__image .card__link .card__link-detail:hover {
+.card-bg .card-image .card-link .card-link-detail:hover {
   text-decoration: underline;
 }
-.card__bg .card__box {
+.card-bg .card-box {
   margin: 3px 0px;
   border-bottom: 1px solid var(--light-gray-color);
   border-radius: 0.5px;
 }
-.card__bg:hover .card__box {
+.card-bg:hover .card-box {
   border-bottom: 1px solid var(--dark-gray-color);
   transition: 0.4s ease-out;
 }
-.card__bg .card__box .card__price {
+.card-bg .card-box .card-price {
   color: var(--primary-color);
 }
-.card__bg .card__box i {
+.card-bg .card-box i {
   padding: 6.5px 8px 5.5px 8px;
   background: none;
   color: var(--dark-gray-color);
   font-size: var(--icon-font-size);
 }
-.card__bg .card__rating .card__star i {
+.card-bg .card-rating .card-star i {
   font-size: var(--icon-font-size2);
   color: var(--dark-gray-color);
 }
-.card__bg .card__rating i.bi-bag-check-fill {
+.card-bg .card-rating i.bi-bag-check-fill {
   font-size: var(--icon-font-size);
   padding: 4px 8px;
   color: var(--dark-gray-color);
   background: none;
   border: 1px solid var(--dark-gray-color);
 }
-.card__bg .card__rating i.bi-bag-check-fill:hover {
+.card-bg .card-rating i.bi-bag-check-fill:hover {
   color: var(--light-gray-color);
   background: var(--dark-gray-color);
   transition: 0.4s ease-out;
