--- a/public/client/styles/pages/product/product.responsive.css
+++ b/public/client/styles/pages/product/product.responsive.css
@@ -1,5 +1,5 @@
 @media (max-width: 575.98px) {
-  .product__filter {
+  .product-filter {
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -9,7 +9,7 @@
     transform: translateX(-100%);
     transition: 0.4s ease-out;
   }
-  .product__filter.show {
+  .product-filter.show {
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -19,16 +19,16 @@
     transform: translateX(0%);
     transition: 0.4s ease-out;
   }
-  .product__filter .product__filter-delete {
+  .product-filter .product-filter-delete {
     display: flex;
   }
-  .product__filter-mobile {
+  .product-filter-mobile {
     display: flex;
   }
 }
 
 @media (max-width: 767.98px) {
-  .product__filter {
+  .product-filter {
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -38,7 +38,7 @@
     transform: translateX(-100%);
     transition: 0.4s ease-out;
   }
-  .product__filter.show {
+  .product-filter.show {
     width: 100%;
     height: 100vh;
     overflow-y: scroll;
@@ -49,10 +49,10 @@
     transform: translateX(0%);
     transition: 0.4s ease-out;
   }
-  .product__filter .product__filter-delete {
+  .product-filter .product-filter-delete {
     display: flex;
   }
-  .product__filter-mobile {
+  .product-filter-mobile {
     display: flex;
   }
 }
