--- a/public/client/styles/partials/footer.css
+++ b/public/client/styles/partials/footer.css
@@ -7,45 +7,45 @@
   text-decoration: none;
   transition: 0.3s ease-in-out;
 }
-.footer .footer__about-logo img {
+.footer .footer-about-logo img {
   border-radius: 8px;
   padding: 4px;
 }
-.footer .footer__partner-item i {
+.footer .footer-partner-item i {
   font-size: 25px;
 }
 .footer li a:hover {
   color: var(--primary-color);
   text-decoration: underline;
 }
-.footer .footer__description,
-.footer .footer__location-item {
+.footer .footer-description,
+.footer .footer-location-item {
   text-align: justify;
 }
-.footer .footer__payment .payment__method-list .payment__method-box {
+.footer .footer-payment .payment-method-list .payment-method-box {
   width: 70px;
   padding: 3px;
   background: white;
   border-radius: 4px;
   overflow: hidden;
 }
-.footer .footer__payment .payment__method-list .payment__method-box img {
+.footer .footer-payment .payment-method-list .payment-method-box img {
   width: 100%;
 }
 
 @media (max-width: 575.98px) {
-  .footer .footer__bottom {
+  .footer .footer-bottom {
     flex-direction: column;
   }
-  .footer .footer__bottom .footer__payment .footer__payment-title {
+  .footer .footer-bottom .footer-payment .footer-payment-title {
     text-align: center;
   }
 }
 @media (max-width: 767.98px) {
-  .footer .footer__bottom {
+  .footer .footer-bottom {
     flex-direction: column;
   }
-  .footer .footer__bottom .footer__payment .footer__payment-title {
+  .footer .footer-bottom .footer-payment .footer-payment-title {
     text-align: center;
   }
 }
