--- a/views/admin/pages/profile/update.view.ejs
+++ b/views/admin/pages/profile/update.view.ejs
@@ -27,7 +27,7 @@
       <%-include("../../partials/sider.view.ejs") %>
       <div class="main">
         <%-include("../../partials/alertMessage.view.ejs") %>
-        <h1 class="heading-font py-0 text-start"><%= pageTitle %></h1>
+        <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
 
         <form
           action="<%= prefixAdmin %>/profile/update?_method=PATCH"
@@ -39,13 +39,13 @@
             <div class="row">
               <div class="col-12">
                 <div class="form-group mb-4">
-                  <label for="fullName"
+                  <label for="fullName" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Họ & Tên</label
                   >
                   <input
                     type="text"
                     name="fullName"
-                    value="<%= account.fullName %>"
+                    value="<%= accountLogin.fullName %>"
                     required
                     id="fullName"
                     class="form-control"
@@ -55,13 +55,13 @@
               
               <div class="col-6 mb-4">
                 <div class="form-group">
-                  <label for="email"
+                  <label for="email" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Địa chỉ email</label
                   >
                   <input
                     type="email"
                     name="email"
-                    value="<%= account.email %>"
+                    value="<%= accountLogin.email %>"
                     required
                     id="email"
                     class="form-control"
@@ -71,7 +71,7 @@
 
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="password"
+                  <label for="password" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Mật khẩu</label
                   >
                   <input
@@ -91,7 +91,7 @@
                   </div>
                   <div class="d-flex justify-content-center image-upload-box">
                     <img
-                      src="<%= account.avatar %>"
+                      src="<%= accountLogin.avatar %>"
                       alt="Hiển thị hình ảnh đại diện"
                       class="image-upload"
                     />
@@ -101,13 +101,13 @@
 
               <div class="col-4">
                 <div class="form-group mb-4">
-                  <label for="phone"
+                  <label for="phone" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Số điện thoại</label
                   >
                   <input
                     type="phone"
                     name="phone"
-                    value="<%= account.phone %>"
+                    value="<%= accountLogin.phone %>"
                     required
                     id="phone"
                     class="form-control"
@@ -117,7 +117,7 @@
 
               <div class="col-4">
                 <div class="form-group mb-4">
-                  <label for="avatar">Ảnh đại diện</label>
+                  <label for="avatar" class="fw-bold">Ảnh đại diện</label>
                   <input
                     type="file"
                     name="avatar"
@@ -131,13 +131,11 @@
 
               <div class="col-4">
                 <div class="form-group mb-4">
-                  <label for="birthDay"
-                    ><span class="text-danger"><b>*</b></span> Ngày sinh</label
-                  >
+                  <label for="birthDay" class="fw-bold">Ngày sinh</label>
                   <input
                     type="date"
                     name="birthDay"
-                    value="<%= account.birthDay %>"
+                    value="<%= accountLogin.birthDay %>"
                     id="birthDay"
                     class="form-control"
                   />
