--- a/views/client/pages/cart/cart.view.ejs
+++ b/views/client/pages/cart/cart.view.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/client/styles/partials/header.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.css" />
     <link rel="stylesheet" href="/client/styles/pages/index/index.responsive.css" />
+    <link rel="stylesheet" href="/client/styles/partials/breadcrumb.css" />
     <link rel="stylesheet" href="/client/styles/pages/cart/cart.css" />
     <link rel="stylesheet" href="/client/styles/partials/footer.css" />
     <!-- End Styles File -->
@@ -40,7 +41,7 @@
     %> <%-include("../../partials/header-mobile.view.ejs") %>
 
     <main class="main">
-      <h3 class="heading-font cart__list-heading">Giỏ hàng</h3>
+      <%-include('../../partials/breadcrumb.view.ejs', { pageTitle: pageTitle, pageUrl: pageUrl })%>
 
       <section class="cart-list">
         <div class="container">
@@ -192,7 +193,7 @@
 
       <% if(cart.products.length > 0) { %>
       <section class="pb-5 related-products">
-        <h3 class="heading-font text-center related-products__title">Sản phẩm liên quan</h3>
+        <h3 class="heading-font text-center related-products-title">Sản phẩm liên quan</h3>
 
         <div class="container">
           <div class="row justify-content-center g-2">
@@ -200,33 +201,33 @@
               >(Không tìm thấy sản phẩm phù hợp)</span
             ><% } %> <% relatedProductList.forEach(product => { %>
             <div class="col-lg-2 col-md-4 col-6">
-              <div class="card__bg" title="<%= product.title %>">
-                <div class="card__image">
+              <div class="card-bg" title="<%= product.title %>">
+                <div class="card-image">
                   <img
                     src="<%= product.thumbnail %>"
                     alt="product"
                     width="100%"
-                    class="card__thumbnail"
+                    class="card-thumbnail"
                   />
-                  <div class="card__link">
+                  <div class="card-link">
                     <a
                       href="/products/detail/<%= product.slug %>"
-                      class="content-font card__link-detail"
+                      class="content-font card-link-detail"
                       >Xem chi tiết</a
                     >
                   </div>
                 </div>
-                <div class="content-font card__title mt-1">
+                <div class="content-font card-title mt-1">
                   <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %> <%
                   } else { %> <%= product.title %> <% } %>
                 </div>
-                <div class="card__box d-flex justify-content-between align-items-center">
-                  <h5 class="title-font card__price">
+                <div class="card-box d-flex justify-content-between align-items-center">
+                  <h5 class="title-font card-price">
                     <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                     }).format(Number.parseFloat(product.price - (product.price / 100 *
                     product.discount))) %>
                   </h5>
-                  <div class="card__favorite">
+                  <div class="card-favorite">
                     <i class="bi bi-suit-heart-fill"></i>
                   </div>
                 </div>
@@ -234,8 +235,8 @@
                   Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                   }).format(product.price) %>
                 </div>
-                <div class="card__rating d-flex justify-content-between align-items-center">
-                  <div class="card__star">
+                <div class="card-rating d-flex justify-content-between align-items-center">
+                  <div class="card-star">
                     <% for(let i = 1; i <= product.rating; i++) { %>
                     <i class="bi bi-star-fill"></i>
                     <% } %>
@@ -256,6 +257,8 @@
       <% } %>
     </main>
 
+    <%-include('../../partials/footer.view.ejs') %>
+
     <form
       action="/cart/delete"
       method="POST"
@@ -270,11 +273,10 @@
       id="form-change-quantity-cart"
     ></form>
 
-    <%-include('../../partials/footer.view.ejs') %>
-
     <!-- Scripts File -->
     <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
+    <script src="/client/scripts/product/toggleSearchProduct.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
     <!-- End Scripts File -->
