--- a/views/client/pages/product/detail.view.ejs
+++ b/views/client/pages/product/detail.view.ejs
@@ -47,26 +47,26 @@
 
     <main class="main">
       <!-- Prroduct detail -->
-      <section class="product__detail pt-5">
+      <section class="product-detail pt-5">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
               <!-- Product detail thumbnail -->
-              <div class="product__detail-thumbnail border mb-3 d-flex justify-content-center">
+              <div class="product-detail-thumbnail border mb-3 d-flex justify-content-center">
                 <img
                   width="100%"
-                  class="product__thumbnail-image fit"
+                  class="product-thumbnail-image fit"
                   src="<%= product.thumbnail %>"
                 />
               </div>
 
               <!-- Product detail image list -->
-              <div class="product__detail-image d-flex justify-content-center mb-3">
+              <div class="product-detail-image d-flex justify-content-center mb-3">
                 <% for(let i = 0; i < product.images.length; i++) { %>
                 <img
                   width="60"
                   height="60"
-                  class="product__image-item border me-2"
+                  class="product-image-item border me-2"
                   src="https://mdbcdn.b-cdn.net/img/bootstrap-ecommerce/items/detail1/big1.webp"
                 />
                 <% } %>
@@ -75,28 +75,26 @@
 
             <!-- Product details info -->
             <div class="col-lg-6">
-              <div class="product__info ps-lg-3">
-                <h4 class="heading-font product__info-title mb-3"><%= product.title %></h4>
+              <div class="product-info ps-lg-3">
+                <h4 class="heading-font product-info-title mb-3"><%= product.title %></h4>
                 <div class="d-flex flex-row my-3">
-                  <div class="content-font product__info-rating rating__star mb-1 me-2">
+                  <div class="content-font product-info-rating rating-star mb-1 me-2">
                     <% for (let i = 0; i < product.rating; i++) { %><i class="fas fa-star"></i><% }
                     %>
-                    <span class="product__info-rating rating__number ms-1">
+                    <span class="product-info-rating rating-number ms-1">
                       <%= product.rating %>
                     </span>
                   </div>
                   <% if(product.stock <= 0) { %>
                   <span
-                    class="content-font product__info-stock mb-1"
+                    class="content-font product-info-stock mb-1"
                     style="color: var(--error-color)"
                     ><i class="fas fa-shopping-basket fa-sm mx-1"></i>Đã hết hàng</span
                   >
                   <% } else { %>
-                  <span class="content-font product__info-stock mb-1"
+                  <span class="content-font product-info-stock mb-1"
                     ><i class="fas fa-shopping-basket fa-sm mx-1"></i>Còn
-                    <span class="content-font info__stock-number fw-bold"
-                      ><%= product.stock %></span
-                    >
+                    <span class="content-font info-stock-number fw-bold"><%= product.stock %></span>
                     mặt hàng</span
                   >
                   <span class="content-font text-success ms-2">trong kho</span>
@@ -104,44 +102,42 @@
                 </div>
 
                 <div class="mb-3">
-                  <span class="title-font product__info-discount h5"
+                  <span class="title-font product-info-discount h5"
                     ><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                     }).format(Number.parseFloat(product.price - (product.price / 100 *
                     product.discount))) %></span
                   >
-                  <span class="product__info-price content-font text-decoration-line-through"
+                  <span class="product-info-price content-font text-decoration-line-through"
                     ><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                     }).format(product.price) %></span
                   >
                 </div>
 
-                <p class="content-font product__info-description mb-4">
-                  <%= product.description %>
-                </p>
+                <p class="content-font product-info-description mb-4"><%= product.description %></p>
 
                 <div class="row">
-                  <dt class="product__info-categoty category__title col-4">Thể loại:</dt>
-                  <dd class="product__info-categoty category__content content-font col-8">
+                  <dt class="product-info-categoty category-title col-4">Thể loại:</dt>
+                  <dd class="product-info-categoty category-content content-font col-8">
                     <%= category.title %>
                   </dd>
 
-                  <dt class="product__info-brand brand__title col-4">Thương hiệu:</dt>
-                  <dd class="product__info-brand brand__content content-font col-8">
+                  <dt class="product-info-brand brand-title col-4">Thương hiệu:</dt>
+                  <dd class="product-info-brand brand-content content-font col-8">
                     <%= product.brand %>
                   </dd>
                 </div>
 
                 <hr />
 
-                <form action="/cart/add/<%= product.id %>" method="POST" class="product__info-form">
-                  <div class="product__info-button row mb-4">
+                <form action="/cart/add/<%= product.id %>" method="POST" class="product-info-form">
+                  <div class="product-info-button row mb-4">
                     <div class="col-md-4 col-6 mb-3">
-                      <label class="product__info-label content-font mb-2 d-block"
+                      <label class="product-info-label content-font mb-2 d-block"
                         ><b>Số lượng</b></label
                       >
-                      <div class="product__info-box input-group mb-3">
+                      <div class="product-info-box input-group mb-3">
                         <button
-                          class="product__info-decrease button-icon-secondary"
+                          class="product-info-decrease button-icon-secondary"
                           type="button"
                           id="button-addon1"
                           data-mdb-ripple-color="dark"
@@ -151,7 +147,7 @@
                         <input
                           name="quantity"
                           type="number"
-                          class="product__info-quantity form-control text-center border border-secondary"
+                          class="product-info-quantity form-control text-center border border-secondary"
                           placeholder="Số lượng..."
                           value="1"
                           min="1"
@@ -160,7 +156,7 @@
                           aria-describedby="button-addon1"
                         />
                         <button
-                          class="product__info-increase button-icon-secondary"
+                          class="product-info-increase button-icon-secondary"
                           type="button"
                           id="button-addon2"
                           data-mdb-ripple-color="dark"
@@ -203,7 +199,7 @@
 
       <!-- Start related products -->
       <section class="pb-5 related-products">
-        <h3 class="heading-font text-center related-products__title">Sản phẩm liên quan</h3>
+        <h3 class="heading-font text-center related-products-title">Sản phẩm liên quan</h3>
 
         <div class="container">
           <div class="row justify-content-center g-2">
@@ -211,33 +207,33 @@
               >(Không tìm thấy sản phẩm phù hợp)</span
             ><% } %> <% relatedProductList.forEach(product => { %>
             <div class="col-lg-2 col-md-4 col-6">
-              <div class="card__bg" title="<%= product.title %>">
-                <div class="card__image">
+              <div class="card-bg" title="<%= product.title %>">
+                <div class="card-image">
                   <img
                     src="<%= product.thumbnail %>"
                     alt="product"
                     width="100%"
-                    class="card__thumbnail"
+                    class="card-thumbnail"
                   />
-                  <div class="card__link">
+                  <div class="card-link">
                     <a
                       href="/products/detail/<%= product.slug %>"
-                      class="content-font card__link-detail"
+                      class="content-font card-link-detail"
                       >Xem chi tiết</a
                     >
                   </div>
                 </div>
-                <div class="content-font card__title mt-1">
+                <div class="content-font card-title mt-1">
                   <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %> <%
                   } else { %> <%= product.title %> <% } %>
                 </div>
-                <div class="card__box d-flex justify-content-between align-items-center">
-                  <h5 class="title-font card__price">
+                <div class="card-box d-flex justify-content-between align-items-center">
+                  <h5 class="title-font card-price">
                     <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                     }).format(Number.parseFloat(product.price - (product.price / 100 *
                     product.discount))) %>
                   </h5>
-                  <div class="card__favorite">
+                  <div class="card-favorite">
                     <i class="bi bi-suit-heart-fill"></i>
                   </div>
                 </div>
@@ -245,8 +241,8 @@
                   Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND'
                   }).format(product.price) %>
                 </div>
-                <div class="card__rating d-flex justify-content-between align-items-center">
-                  <div class="card__star">
+                <div class="card-rating d-flex justify-content-between align-items-center">
+                  <div class="card-star">
                     <% for(let i = 1; i <= product.rating; i++) { %>
                     <i class="bi bi-star-fill"></i>
                     <% } %>
@@ -266,6 +262,8 @@
       <!-- End related products -->
     </main>
 
+    <%-include("../../partials/footer.view.ejs") %>
+
     <form
       action="/cart/delete"
       method="POST"
@@ -280,14 +278,13 @@
       id="form-change-quantity-cart"
     ></form>
 
-    <%-include("../../partials/footer.view.ejs") %>
-
     <!-- Scripts File -->
     <script src="/client/scripts/alertMessage.js"></script>
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
     <script src="/client/scripts/customInputRange.js"></script>
     <script src="/client/scripts/product/showProductFilter.js"></script>
     <script src="/client/scripts/product/handleQuantityCart.js"></script>
+    <script src="/client/scripts/product/toggleSearchProduct.js"></script>
     <script src="/client/scripts/cart/deleteProductInCart.js"></script>
     <script src="/client/scripts/cart/changeProductQuantity.js"></script>
     <!-- End Scripts File -->
