--- a/views/client/partials/header-mobile.view.ejs
+++ b/views/client/partials/header-mobile.view.ejs
@@ -1,10 +1,14 @@
 <!-- Header Mobie -->
-<header class="header-mobie">
+<header class="shadow header-mobie">
   <div class="container">
     <div class="row">
       <div class="col-6 header-mobie-logo">
         <a href="/" class="logo-link"
-          ><img src="/client/images/logo.png" alt="logo" width="115px" class="logo-img"
+          ><img
+            src="<%= clientWebsite ? clientWebsite.logo : '' %>"
+            alt="logo"
+            width="115px"
+            class="logo-img"
         /></a>
       </div>
       <div class="col-6 header-mobie-menu">
@@ -27,60 +31,88 @@
       </div>
     </div>
   </div>
+
+  <div class="header-mobie-search-box">
+    <form
+      method="GET"
+      action="/products"
+      id="form-search"
+      class="d-flex justify-content-center header-mobie-search-form"
+    >
+      <input
+        type="text"
+        name="keyword"
+        placeholder="Nhập từ khóa..."
+        class="content-font flex-fill p-2 header-mobie-search-inp"
+      />
+      <button type="submit" class="button-icon-secondary header-mobie-search-button">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </button>
+    </form>
+    <div class="header-mobie-search-close"><i class="fa-solid fa-xmark"></i></div>
+  </div>
 </header>
 <!-- End Header Mobie -->
 
 <!-- Navheader Mobie -->
 <nav class="navheader-mobie">
-  <div class="navheader-mobie-box">
-    <div class="navheader-mobie-bg">
-      <div class="col-12 mt-5">
-        <div class="navheader-mobie-nav">
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a href="" class="nav-link"><i class="fa-solid fa-house me-2"></i>Trang chủ</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link"><i class="fa-solid fa-hand me-2"></i>Giới thiệu</a>
-            </li>
-            <li class="nav-item">
-              <a href="/products" class="nav-link"
-                ><i class="bi bi-list-columns-reverse me-2"></i>Sản phẩm</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link"
-                ><i class="bi bi-list-task me-2"></i>Thể loại<i
-                  class="bx bx-chevron-down float-end mt-1"
-                ></i
-              ></a>
-              <ul class="nav-list-dropdown">
-                <li class="nav-item">
-                  <a href="" class="nav-link">Skincare</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Bodycare</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Haircare</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Nailcare</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Makeup</a>
-                </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">Perfume</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link"><i class="fa-solid fa-phone-flip me-2"></i>Liên hệ</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+  <div class="navheader-mobie-overlay"></div>
+  <div class="navheader-mobie-bg">
+    <div class="navheader-mobie-nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="/" class="nav-link content-font"
+            ><i class="fa-solid fa-house me-2"></i>Trang chủ</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="/about" class="nav-link content-font"
+            ><i class="fa-solid fa-hand me-2"></i>Giới thiệu</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="/products" class="nav-link content-font"
+            ><i class="bi bi-list-columns-reverse me-2"></i>Sản phẩm</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="/blogs" class="nav-link content-font"
+            ><i class="bi bi-list-columns-reverse me-2"></i>Bài viết</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="/contact" class="nav-link content-font"
+            ><i class="fa-solid fa-phone-flip me-2"></i>Liên hệ</a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="navheader-mobie-user">
+      <ul class="ps-0 mb-0 btn-group border border-1 rounded-0 d-flex user-list">
+        <% if(user) { %>
+        <li
+          class="btn border border-right-1 border-left-0 border-top-0 border-bottom-0 rounded-0 flex-grow-1 user-item"
+        >
+          <a href="/logout" class="content-font text-decoration-none user-link">Đăng xuất</a>
+        </li>
+        <li
+          class="btn border border-right-1 border-left-0 border-top-0 border-bottom-0 rounded-0 flex-grow-1 user-item"
+        >
+          <a href="/logout" class="content-font text-decoration-none user-link">Cài đặt</a>
+        </li>
+        <% } else { %>
+        <li
+          class="btn border border-right-1 border-left-0 border-top-0 border-bottom-0 rounded-0 flex-grow-1 user-item"
+        >
+          <a href="/login" class="content-font text-decoration-none user-link">Đăng nhập</a>
+        </li>
+        <li
+          class="btn border border-left-1 border-right-0 border-top-0 border-bottom-0 rounded-0 flex-grow-1 user-item"
+        >
+          <a href="/register" class="content-font text-decoration-none user-link">Đăng ký</a>
+        </li>
+        <% } %>
+      </ul>
     </div>
   </div>
 </nav>
