--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -53,7 +53,7 @@
             <% if(miniCart) { %>
             <div class="header-others-cart-number"><%= miniCart.totalQuantityProduct %></div>
             <% } %>
-            <div class="p-2 d-flex flex-column gap-1 header-others-cart-box">
+            <div class="p-2 d-flex flex-column gap-1 shadow header-others-cart-box">
               <h4
                 title="Hiện có <%= miniCart ? miniCart.totalQuantityOrder : 0  %> đơn hàng và <%= miniCart ? miniCart.totalQuantityProduct : 0  %> sản phẩm trong giỏ hàng"
                 class="title-font my-2 text-capitalize text-center header-others-cart-title"
@@ -108,7 +108,7 @@
                         type="number"
                         min="0"
                         class="input-type01 text-center w-100 cart-body-product-quantity"
-                        product-id="<%= product.id %>"
+                        product-id="<%= product._id %>"
                         value="<%= product.quantity %>"
                       />
                     </div>
@@ -153,7 +153,7 @@
               <% } else { %>
               <i class="fa-solid fa-user"></i>
               <% } %>
-              <ul class="auth-list">
+              <ul class="shadow auth-list">
                 <% if(!user) {%>
                 <li class="auth-item">
                   <a href="/login" class="auth-link"
@@ -187,7 +187,7 @@
 <!-- End Header -->
 
 <!-- Nav -->
-<nav class="navheader">
+<nav class="shadow navheader">
   <div class="container">
     <div class="row">
       <div class="col-12 navheader-menu">
@@ -217,7 +217,7 @@
           <li class="navheader-menu-item">
             <a href="/contact.html" <% if(newsActive) { %>
               class="navheader-menu-link nav-link active" <% } else { %> class="navheader-menu-link
-              nav-link" <% } %>>Tin tức</a
+              nav-link" <% } %>>Bài viết</a
             >
           </li>
           <li class="navheader-menu-item">
